Added Swagger Docs and Completed implemetation for 6/8 API's and connected to DynamoDB
