# products-service/docs/swagger.yaml
@@ -27,7 +27,7 @@ definitions:
         items:
           type: integer
         type: array
-      product_description_model:
+      product_description:
         $ref: '#/definitions/models.ProductDescriptionModel'
       product_related:
         items:
@@ -88,6 +88,26 @@ info:
   title: Swagger Products Service API
   version: "1.0"
 paths:
+  /:
+    get:
+      consumes:
+      - application/json
+      description: This request will return 200 OK if server is up..
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: number
+      summary: To check if the service is running or not.
+      tags:
+      - Health
   /products:
     get:
       description: Fetches and displays all the products
@@ -97,7 +117,8 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/models.Product'
+            additionalProperties: true
+            type: object
         "500":
           description: Internal Server Error
           schema:
@@ -115,7 +136,8 @@ paths:
         "200":
           description: OK
           schema:
-            type: string
+            additionalProperties: true
+            type: object
         "500":
           description: Internal Server Error
           schema:
